--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@ saxophone, having volunteered in a local community orchestra and band.
             <!-- Section Title -->
             <div class="absolute top-12 left-4 md:left-12 z-20">
                 <span class="text-eng-500 font-bold uppercase tracking-wider text-sm">Design Vault</span>
-                <h2 class="text-3xl md:text-5xl font-bold text-slate-900 mt-2">Selected Works</h2>
+                <h2 class="text-3xl md:text-5xl font-bold text-slate-900 mt-2">Favourite Projects</h2>
             </div>
 
             <!-- The Horizontal Track (Moves Left) -->
@@ -499,20 +499,22 @@ saxophone, having volunteered in a local community orchestra and band.
                         <!-- Overlay Text -->
                         <div class="absolute bottom-6 left-6 text-white">
                             <div class="text-eng-400 font-mono text-sm mb-1">PROJ-001</div>
-                            <h3 class="text-3xl font-bold">6-Axis Robotic Arm</h3>
+                            <h3 class="text-3xl font-bold">Self-Balancing Robot</h3>
                         </div>
                     </div>
                     <div class="h-2/5 p-8 flex flex-col justify-between">
                         <p class="text-slate-600 leading-relaxed">
-                            A high-precision manipulator designed for assembly line automation. 
-                            Features include custom inverse kinematics solver and topology-optimized structural links.
+                            Developed a PID control system to enable a two-wheeled Arduino robot to balance autonomously on different surfaces.
+                            Achieved using Ziegler-Nichols tuning method and iterative testing.
                         </p>
                         <div class="flex justify-between items-end">
                             <div class="flex gap-2">
-                                <span class="px-3 py-1 bg-slate-100 text-slate-600 rounded text-sm font-bold">SolidWorks</span>
+                                <span class="px-3 py-1 bg-slate-100 text-slate-600 rounded text-sm font-bold">MATLAB</span>
+                                <span class="px-3 py-1 bg-slate-100 text-slate-600 rounded text-sm font-bold">Simulink</span>
                                 <span class="px-3 py-1 bg-slate-100 text-slate-600 rounded text-sm font-bold">Arduino</span>
+                                <span class="px-3 py-1 bg-slate-100 text-slate-600 rounded text-sm font-bold">Data Analytics</span>
                             </div>
-                            <a href="#" class="w-12 h-12 rounded-full border border-slate-300 flex items-center justify-center hover:bg-eng-500 hover:text-white hover:border-eng-500 transition-all">
+                            <a href="#" class="magnetic-btn w-12 h-12 rounded-full border border-slate-300 flex items-center justify-center hover:bg-eng-500 hover:text-white hover:border-eng-500 transition-all">
                                 <i data-lucide="arrow-right" class="w-5 h-5"></i>
                             </a>
                         </div>
@@ -522,24 +524,24 @@ saxophone, having volunteered in a local community orchestra and band.
                 <!-- Card 2: Turbine Blade -->
                 <div class="relative min-w-[85vw] md:min-w-[600px] h-[70vh] bg-white rounded-3xl shadow-2xl border border-slate-200 overflow-hidden flex flex-col">
                     <div class="h-3/5 bg-slate-800 relative overflow-hidden group">
-                        <img src="https://images.unsplash.com/photo-1497435334941-8c899ee9e8e9?q=80&w=800" 
+                        <img src="https://github.com/Nealbatchelor/portfolioassets/blob/main/DogED1.png" 
                              class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110 opacity-90" alt="Turbine">
                         <div class="absolute bottom-6 left-6 text-white">
                             <div class="text-eng-400 font-mono text-sm mb-1">PROJ-002</div>
-                            <h3 class="text-3xl font-bold">High-Eff Turbine</h3>
+                            <h3 class="text-3xl font-bold">Dog Exercise & Entertainment System</h3>
                         </div>
                     </div>
                     <div class="h-2/5 p-8 flex flex-col justify-between">
                         <p class="text-slate-600 leading-relaxed">
-                            Aerodynamic profile optimization achieving a 12% increase in efficiency. 
-                            Validated using ANSYS CFX with standard boundary conditions.
+                            Designed, built and tested a mechanical exercise and entertainment system for dogs. System used a series of mechanical components to achieve this, including a Sprag Clutch, Torsional Spring, Rachet, Cam & Friction Brake.
                         </p>
                         <div class="flex justify-between items-end">
                             <div class="flex gap-2">
-                                <span class="px-3 py-1 bg-slate-100 text-slate-600 rounded text-sm font-bold">CFD</span>
-                                <span class="px-3 py-1 bg-slate-100 text-slate-600 rounded text-sm font-bold">Thermo</span>
+                                <span class="px-3 py-1 bg-slate-100 text-slate-600 rounded text-sm font-bold">CAD</span>
+                                <span class="px-3 py-1 bg-slate-100 text-slate-600 rounded text-sm font-bold">Rotary Systems</span>
+                                <span class="px-3 py-1 bg-slate-100 text-slate-600 rounded text-sm font-bold">Continuous Improvement Cycles</span>
                             </div>
-                            <a href="#" class="w-12 h-12 rounded-full border border-slate-300 flex items-center justify-center hover:bg-eng-500 hover:text-white hover:border-eng-500 transition-all">
+                            <a href="#" class="magnetic-btn w-12 h-12 rounded-full border border-slate-300 flex items-center justify-center hover:bg-eng-500 hover:text-white hover:border-eng-500 transition-all">
                                 <i data-lucide="arrow-right" class="w-5 h-5"></i>
                             </a>
                         </div>
@@ -553,20 +555,21 @@ saxophone, having volunteered in a local community orchestra and band.
                              class="w-full h-full object-cover transition-transform duration-700 group-hover:scale-110 opacity-90" alt="Gearbox">
                         <div class="absolute bottom-6 left-6 text-white">
                             <div class="text-eng-400 font-mono text-sm mb-1">PROJ-003</div>
-                            <h3 class="text-3xl font-bold">Planetary Gearbox</h3>
+                            <h3 class="text-3xl font-bold">Dual-axis Solar Tracker</h3>
                         </div>
                     </div>
                     <div class="h-2/5 p-8 flex flex-col justify-between">
                         <p class="text-slate-600 leading-relaxed">
-                            Compact reduction unit for EV powertrain. Reduced mass by 15% through 
-                            material substitution and generative design of the casing.
+                            Designed, built and tested a 2 Degree-Of-Freedom Solar Tracker. During testing, the solar tracker acheived a 23% increase in energy incident compared to a static PV cell across a simulated day cycle.
                         </p>
                         <div class="flex justify-between items-end">
                             <div class="flex gap-2">
-                                <span class="px-3 py-1 bg-slate-100 text-slate-600 rounded text-sm font-bold">AutoCAD</span>
-                                <span class="px-3 py-1 bg-slate-100 text-slate-600 rounded text-sm font-bold">Materials</span>
+                                <span class="px-3 py-1 bg-slate-100 text-slate-600 rounded text-sm font-bold">CAD</span>
+                                <span class="px-3 py-1 bg-slate-100 text-slate-600 rounded text-sm font-bold">Control Systems</span>
+                                <span class="px-3 py-1 bg-slate-100 text-slate-600 rounded text-sm font-bold">Electromechanical</span>
+                                <span class="px-3 py-1 bg-slate-100 text-slate-600 rounded text-sm font-bold">Arduino</span>
                             </div>
-                            <a href="#" class="w-12 h-12 rounded-full border border-slate-300 flex items-center justify-center hover:bg-eng-500 hover:text-white hover:border-eng-500 transition-all">
+                            <a href="#" class="magnetic-btn w-12 h-12 rounded-full border border-slate-300 flex items-center justify-center hover:bg-eng-500 hover:text-white hover:border-eng-500 transition-all">
                                 <i data-lucide="arrow-right" class="w-5 h-5"></i>
                             </a>
                         </div>
@@ -742,7 +745,7 @@ saxophone, having volunteered in a local community orchestra and band.
                             </div>
                             <div>
                                 <label for="message" class="block text-sm font-medium text-slate-700 mb-2">Message</label>
-                                <textarea id="message" rows="4" class="w-full px-4 py-3 rounded-lg border border-slate-200 focus:border-eng-500 focus:ring-2 focus:ring-eng-200 outline-none transition-all" placeholder="I aim to respond ASAP..."></textarea>
+                                <textarea id="message" rows="4" class="w-full px-4 py-3 rounded-lg border border-slate-200 focus:border-eng-500 focus:ring-2 focus:ring-eng-200 outline-none transition-all" placeholder=""></textarea>
                             </div>
                             <button type="submit" class="w-full bg-eng-900 text-white font-bold py-4 rounded-lg hover:bg-eng-800 transition-colors shadow-lg shadow-eng-900/10">
                                 Send Message
