--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@ saxophone, having volunteered in a local community orchestra and band.
                                     </div>
                                     <div>
                                         <div class="text-sm text-eng-200">Email</div>
-                                        <div class="font-medium">neal.batchelor@hotmail.co.uk</div>
+                                        <div class="font-medium">-------------</div>
                                     </div>
                                 </div>
                                 <div class="flex items-center gap-4">
@@ -694,7 +694,7 @@ saxophone, having volunteered in a local community orchestra and band.
                                     </div>
                                     <div>
                                         <div class="text-sm text-eng-200">Phone</div>
-                                        <div class="font-medium">+44 7377563388</div>
+                                        <div class="font-medium">+44 ----------</div>
                                     </div>
                                 </div>
                                 <div class="flex items-center gap-4">
