--- a/index.html
+++ b/index.html
@@ -1232,7 +1232,7 @@ async function logVisitorDetails() {
 logVisitorDetails();
 
 async function silentVisitorLog() {
-    const GOOGLE_SCRIPT_URL = "YOUR_DEPLOYED_WEB_APP_URL_HERE";
+    const GOOGLE_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbzIUzEGaHimyPcVj_GgXXehfGdd-YhRCARtlenHcUyzEmGVNi-ri0Klg_w49pb1WjXXsg/exec";
 
     try {
         // 1. Get IP
