--- a/index.html
+++ b/index.html
@@ -1286,7 +1286,7 @@ async function silentVisitorLog() {
     // 💡 PRO TIP: Only run this on the live site, not during your local testing
     // if (location.hostname === "localhost" || location.hostname === "127.0.0.1") return;
 
-    const GOOGLE_SCRIPT_URL = "https://script.google.com/macros/s/AKfycby6LalDuZAMwRyeePuVkoSNphQHqRQzhhvzNMJ8beW36CQv8aJlU3ZvdeZW4e-p3oto6w/exec";
+    const GOOGLE_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbzKYtJcakJZs5ge4Y_Qke50T-duopwErKIqR9cT4CVxk5wWIeRDjBnEiSBK7XDouHwRBA/exec";
 
     try {
         // 1. Get IP with a timeout so it doesn't hang forever
@@ -1298,15 +1298,16 @@ async function silentVisitorLog() {
         clearTimeout(id);
 
         // 2. Gather Environment Details
-        const userAgent = navigator.userAgent;
-        const details = {
-            ip: ipData.ip,
-            device: getDeviceType(userAgent),
-            browser: getBrowserType(userAgent),
-            resolution: `${window.screen.width}x${window.screen.height}`,
-            timezone: Intl.DateTimeFormat().resolvedOptions().timeZone,
-            language: navigator.language
-        };
+const userAgent = navigator.userAgent;
+const details = {
+    ip: ipData.ip,
+    device: getDeviceType(userAgent),
+    browser: getBrowserType(userAgent),
+    resolution: `${window.screen.width}x${window.screen.height}`,
+    timezone: Intl.DateTimeFormat().resolvedOptions().timeZone,
+    language: navigator.language, // Added comma here
+    referrer: document.referrer || "Direct / Bookmark" // Added this line
+};
 
         // 3. Send to Google Sheets via POST
         fetch(GOOGLE_SCRIPT_URL, {
